Fixed Bug on smaller screens

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 0;
+    overflow-x: hidden  ;
 }
 
 header{
@@ -15,7 +16,7 @@ header{
 .nav-container{
     padding-top: 3vh;
     display: flex;
-    gap: 38vw;
+    gap: 32vw;
 }
 
 .nav-container a{
@@ -38,8 +39,51 @@ header{
     gap: 2vw;
 }
 
-.Main-Img-Container{
+.Main-Img-Container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 1140px ;
+    margin: -9vw auto 0 auto;
+    gap: 2vh;
+}
+
+.Main-Img-Container img {
+    width: 100%;
+    height: auto;
+    max-width: 1200px;
+}
+
+.Main-Img-Container h3{
+    font-weight: bold;
+    margin-top: -0.2vh;
+    font-size: 25px;
+}
+
+.Section-Img-Container{
     display: flex;
     justify-content: center;
-    margin-top: -15vh;
+    gap: 0.6vw;
+    margin: 1.5vh auto 0 auto;
+    max-width: 1000px;
+    width: 100%;
+}
+
+section p{
+    display: block;
+    text-align: left;
+    margin: 20px auto;
+    max-width: 800px;
+}
+
+.Extra-Information{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+    color: white;
+    width: 13vw;
+    height: 4vh;
+    margin: 40px auto;
+    border-radius: 3vh;
 }
